# mtg-draft

./: Cargo.toml  README.md
data/: card.json  card_actual.json
examples/: get_cards.rs
src/tests/: mod.rs
