[package]
name = "mtg-draft"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6.20"
shuttle-axum = "0.30.0"
shuttle-runtime = "0.30.0"
tokio = "1.28.2"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.107"
